# bus-book

./: README.md  package-lock.json  package.json  server.js  vercel.json
api/: index.js
backend/booking-project/: .env  Cargo.toml
backend/booking-project/src/: main.rs
backend/booking-project/src/db/: mongodb.rs
backend/booking-project/src/handlers/: auth.rs  bookings.rs  buses.rs  mod.rs
backend/booking-project/src/models/: auth.rs  booking.rs  bus.rs  mod.rs  user.rs
frontend/bus-project/: package-lock.json  package.json
frontend/bus-project/src/: index.js
frontend/bus-project/src/contexts/: AuthContext.jsx
frontend/bus-project/src/pages/: Booking.css  Booking.jsx  BusSeats.css  BusSeats.jsx  Login.css  Login.jsx  MyBookings.jsx  Register.css  Register.jsx  dashboard.css  dashboard.jsx
frontend/bus-project/src/services/: api.js
